--- a/AngularMvcProject/App/View/Setting/Services.html
+++ b/AngularMvcProject/App/View/Setting/Services.html
@@ -57,7 +57,7 @@
                                         </a>
                                     </li>
                                     <li id="sign_out" class="nav-dropdown-li-last">
-                                        <a href="#">
+                                        <a ng-click="Logout()" class="cursorhand">
                                             <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-log-out setmore-icon-fsize"></span> </div>
                                             <div class="nav-dropdown-desc-holder">
                                                 <h3 class="nav-dropdown-desc-header">Sign Out</h3>
@@ -104,7 +104,7 @@
                                         </a>
                                     </li>
                                     <li id="sign_out" class="nav-dropdown-li-last">
-                                        <a href="/logout.do">
+                                        <a ng-click="Logout()" class="cursorhand">
                                             <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-log-out setmore-icon-fsize"></span> </div>
                                             <div class="nav-dropdown-desc-holder">
                                                 <h3 class="nav-dropdown-desc-header">Sign Out</h3>
@@ -245,7 +245,7 @@
                                                             </a>
                                                         </li>
                                                         <li id="sign_out" class="nav-dropdown-li-last">
-                                                            <a href="#">
+                                                            <a ng-click="Logout()" class="cursorhand">
                                                                 <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-log-out setmore-icon-fsize"></span> </div>
                                                                 <div class="nav-dropdown-desc-holder">
                                                                     <h3 class="nav-dropdown-desc-header">Sign Out</h3>
@@ -292,7 +292,7 @@
                                                             </a>
                                                         </li>
                                                         <li id="sign_out" class="nav-dropdown-li-last">
-                                                            <a href="/logout.do">
+                                                            <a ng-click="Logout()" class="cursorhand">
                                                                 <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-log-out setmore-icon-fsize"></span> </div>
                                                                 <div class="nav-dropdown-desc-holder">
                                                                     <h3 class="nav-dropdown-desc-header">Sign Out</h3>
