--- a/AngularMvcProject/App/View/Setting/Staff.html
+++ b/AngularMvcProject/App/View/Setting/Staff.html
@@ -56,7 +56,7 @@
                                         </a>
                                     </li>
                                     <li id="sign_out" class="nav-dropdown-li-last">
-                                        <a href="#">
+                                        <a ng-click="Logout()" class="cursorhand">
                                             <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-log-out setmore-icon-fsize"></span> </div>
                                             <div class="nav-dropdown-desc-holder">
                                                 <h3 class="nav-dropdown-desc-header">Sign Out</h3>
@@ -103,7 +103,7 @@
                                         </a>
                                     </li>
                                     <li id="sign_out" class="nav-dropdown-li-last">
-                                        <a href="/logout.do">
+                                        <a ng-click="Logout()" class="cursorhand">
                                             <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-log-out setmore-icon-fsize"></span> </div>
                                             <div class="nav-dropdown-desc-holder">
                                                 <h3 class="nav-dropdown-desc-header">Sign Out</h3>
@@ -241,7 +241,7 @@
                                                             </a>
                                                         </li>
                                                         <li id="sign_out" class="nav-dropdown-li-last">
-                                                            <a href="#">
+                                                            <a ng-click="Logout()" class="cursorhand">
                                                                 <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-log-out setmore-icon-fsize"></span> </div>
                                                                 <div class="nav-dropdown-desc-holder">
                                                                     <h3 class="nav-dropdown-desc-header">Sign Out</h3>
@@ -288,7 +288,7 @@
                                                             </a>
                                                         </li>
                                                         <li id="sign_out" class="nav-dropdown-li-last">
-                                                            <a href="/logout.do">
+                                                            <a ng-click="Logout()" class="cursorhand">
                                                                 <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-log-out setmore-icon-fsize"></span> </div>
                                                                 <div class="nav-dropdown-desc-holder">
                                                                     <h3 class="nav-dropdown-desc-header">Sign Out</h3>
@@ -1144,7 +1144,7 @@
                                                             </a>
                                                         </li>
                                                         <li id="sign_out" class="nav-dropdown-li-last">
-                                                            <a href="#">
+                                                            <a ng-click="Logout()" class="cursorhand">
                                                                 <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-log-out setmore-icon-fsize"></span> </div>
                                                                 <div class="nav-dropdown-desc-holder">
                                                                     <h3 class="nav-dropdown-desc-header">Sign Out</h3>
@@ -1191,7 +1191,7 @@
                                                             </a>
                                                         </li>
                                                         <li id="sign_out" class="nav-dropdown-li-last">
-                                                            <a href="/logout.do">
+                                                            <a ng-click="Logout()" class="cursorhand">
                                                                 <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-log-out setmore-icon-fsize"></span> </div>
                                                                 <div class="nav-dropdown-desc-holder">
                                                                     <h3 class="nav-dropdown-desc-header">Sign Out</h3>
