Customer stats tab changes

--- a/AngularMvcProject/App/View/Customer/customer.html
+++ b/AngularMvcProject/App/View/Customer/customer.html
@@ -900,7 +900,7 @@
                                                     </div>-->
                                                     <div class="chooseYearDiv">
                                                     <div class="label">Choose a year:</div>
-                                                    <div id="selectyearbox" dx-select-box="{dataSource: SelectBoxYearDataSource,onValueChanged: filterMonthsbyYears}"></div>
+                                                    <div id="selectyearbox" dx-select-box="{dataSource: SelectBoxYearDataSource,onValueChanged: filterMonthsbyYears,value:'2017',width:120}"></div>
                                                     </div>
                                                         <!--<div class="chooseMonthDiv">
                                                             <div class="label">Choose a month:</div>
@@ -911,7 +911,7 @@
                                                         <div class="label">Choose a month:</div>
                                                         <!--<div id="selectbox" dx-select-box="selectBoxOptions"  ></div>-->
                                                         <!--<div id="selectbox" dx-select-box="selectBoxOptions" ng-model="SelectedMonth"></div>-->
-                                                        <div id="selectbox" dx-select-box="{dataSource: SelectBoxMonthDataSource,onValueChanged:ReloadChart}"></div>
+                                                        <div id="selectbox" dx-select-box="{dataSource: SelectBoxMonthDataSource,onValueChanged:ReloadChart,value:'All',width:120}"></div>
                                                     </div>
 
 
