--- a/AngularMvcProject/App/View/SignUp/SignIn.html
+++ b/AngularMvcProject/App/View/SignUp/SignIn.html
@@ -24,7 +24,7 @@
 
                 </div>
                 <!--@*<div style=" width 100px; text-align center; top 0; position absolute; left 45%; right 50%; z-index 999999;" ng-if="IsVisible"><span id="voice-box" class="noDisplay" style="background:yellow;" ng-bind="MessageText"></span></div>*@-->
-                <div style="width:100px; text-align:center; top:0; position:absolute; left:45%; right:50%; z-index:999999;" ng-if="IsVisible"><span id="voice-box" class="noDisplay" style="background:yellow;" ng-bind="MessageText"></span></div>
+                <div style="width: 45%;text-align: center;position: absolute;z-index: 999999; top:65px;" ng-if="IsVisible"><span id="voice-box" class="" style="background:yellow; padding:5px 10px; border-radius:0 0 2px 2px;" ng-bind="MessageText"></span></div>
             </div>
         </div>
     </div>
